2003-08-01  Lorenzo Gil <lgs@sicem.biz>

	* gui/e-alarm-list.c: added the include <config.h> line at the
        beginning to enable gettext.

2003-08-01  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.[ch] (e_cal_model_get_component_at): new function.
	(ecm_append_row): use the client from the source model.
	(e_cal_model_get_timezone, e_cal_model_set_timezone): new functions.

	* gui/e-cal-model-tasks.[ch]: new class for the tasks model.

2003-07-31  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.[ch]: new class, based on CalendarModel to be
	an abstract class for calendar models.

	* gui/Makefile.am: added new files to build.

2003-07-30  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client-multi.[ch]:
	* cal-client/Makefile.am: removed obsolete code.

2003-07-29  Rodrigo Moya <rodrigo@ximian.com>

	Fixes all "alarm daemon doesn't start with session"

	* gui/alarm-notify/notify-main.c (main): use LIBGNOMEUI_MODULE
	instead of LIBGNOME_MODULE so that the default session client
	is created in gnome_program_init.

2003-07-29 Harry Lu <harry.lu@sun.com>

	Fixes #46769

	* gui/dialogs/task-page.c: (task_page_fill_component): Popup a 
	error dialog if due date time is before start datetime when saving
	a task.

2003-07-29  Bolian Yin <bolian.yin@sun.com>

        Fixes #46847

        * gui/e-day-view.c (e_day_view_get_next_tab_event, e_day_view_focus):
         add day view widget in the tab loop of events.
        * gui/e-week-view.c (e_week_view_get_next_tab_event, e_week_view_focus):
         add week view widget in the tab loop of events.

        Also: add some comments in gui/e-day-view.c and gui/e-week-view.c
              remove two compile warnings in gui/e-day-view.c

2003-07-24  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-view.[ch] (e_cal_view_delete_selected_occurrence):
	new function.
	(e_cal_view_get_timezone, e_cal_view_set_timezone): new functions.
	(e_cal_view_class_init): added new class' signal.
