@@ -1,3 +1,12 @@
+2003-08-04  Rodrigo Moya <rodrigo@ximian.com>
+
+	* cal-client/cal-query.[ch] (cal_query_new): added a 'CalClient'
+	argument to this function.
+	(cal_query_get_client): new function.
+
+	* cal-client/cal-client.c (cal_client_get_query): added new parameter
+	in call to cal_query_new ().
+
 2003-08-01  Lorenzo Gil <lgs@sicem.biz>
 
 	* gui/e-alarm-list.c: added the include <config.h> line at the
